@@ -6,7 +6,6 @@
 #ifdef USE_SSL
 #include <bio.h>
 #include <x509.h>
-#include <x509v3.h>
 #include <ssl.h>
 #endif
 #include "Str.h"
@@ -127,7 +126,7 @@ extern int ISfileno(InputStream stream);
 extern int ISeos(InputStream stream);
 #ifdef USE_SSL
 extern Str ssl_get_certificate(InputStream stream);
-extern Str ssl_check_cert_ident(SSL *handle, char *hostname);
+extern Str ssl_check_cert_ident(SSL * handle, char *hostname);
 #endif
 
 #define IST_BASIC	0
