@@ -1,5 +1,12 @@
 2001-12-26  Fumitoshi UKAI  <ukai@debian.or.jp>
 
+	* istream.h: #include <x509v3.h> deleted
+	* istream.c: #include <x509v3.h>
+	* istream.c (ssl_check_cert_ident): of subjectAltName dNSName found,
+		don't try commonName
+
+2001-12-26  Fumitoshi UKAI  <ukai@debian.or.jp>
+
 	* [w3m-dev 02743] RFC2818 server identity check
 	* NEWS: RFC2818 server identity check
 	* istream.c (ssl_check_cert_ident): added
